# distributed-file-system

./: .gitignore  Cargo.toml  Readme.md  build.rs
protos/: data.proto  meta.proto
src/client/: main.rs
src/master/: error.rs  file_meta.rs  main.rs  meta_app.rs  meta_rpc.rs
src/myraft/: Cargo.toml
src/myraft/examples/my_kv/: Cargo.toml
src/myraft/examples/my_kv/src/: client_rpc.rs  kv_app.rs  server.rs
src/myraft/src/: raft.rs  storage.rs
src/util/: mod.rs  register_center.rs
src/worker/: data_app.rs  data_rpc.rs  error.rs  main.rs
