[package]
name = "dfs"
version = "0.1.0"
authors = ["shenyushi <shenyushi@sjtu.edu.cn>"]
edition = "2018"
build = "build.rs"

[lib]
name = "util"
path = "src/util/mod.rs"

[[bin]]
name = "master"
path = "src/master/main.rs"

[[bin]]
name = "worker"
path = "src/worker/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
rand = "0.8.4"
zookeeper = "0.6.0"
protobuf = "2.24.1"
serde = "1.0.126"
bincode = "1.3.3"
tonic = "0.5.0"
tokio = "1.8.1"
prost = "0.8.0"
myraft = { path = "src/myraft" }
anyhow = "1.0.42"
sled = "0.34.6"
structopt = "0.3.22"
env_logger = "0.9.0"
log = "0.4.14"
futures = "0.3.15"

[build-dependencies]
tonic-build = "0.5.0"
